--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
 		</dependency>
+		<dependency>
+    		<groupId>org.elasticsearch.client</groupId>
+    		<artifactId>elasticsearch-rest-high-level-client</artifactId>
+    		<version>7.17.9</version>
+		</dependency>
 		
 		<dependency>
     		<groupId>org.apache.commons</groupId>
